Fix input width on IE11

--- a/app/component/summary.scss
+++ b/app/component/summary.scss
@@ -52,7 +52,6 @@
     &.text-time-selector, &.desktop {
       padding: 0 0.5em 0 0.5em;
       margin: 0 -0.5em 0 0;
-      max-width: 4.5em;
       text-align: center;
     }
   }
